Refined builder pattern